@@ -196,6 +196,11 @@
                         <include>**/studentapp/**/*.java</include>
 						<include>**/studentapp/*.java</include>
                     </includes>
+                    <forkCount>4</forkCount>
+					<reuseForks>false</reuseForks>
+					<!-- <parallel>methods</parallel> -->
+				 	<!-- <threadCount>10</threadCount> --> 
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <argLine>-Xmx512m</argLine>
                 </configuration>
                 <executions>
